--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1 class="text-uppercase">Start Bootstrap</h1>
             <br><br><br>
             <hr class="star-light">
-            <h2>Jr.FrontEnd Developer - Web Designer</h2>
+            <h2>Jr.Web Developer</h2>
         </div>
     </header>
 
@@ -255,14 +255,14 @@
             <small>Copyright Your Website 2025</small>  
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
     <script>
-        $(".nav-icon").click(function() {
-            $("#nav-links").toggleClass("responsive")
+        $(".nav-icon").click(function(){
+            $("#nav-links").toggleClass("responsive");
             return false;
         });
     </script>
-
 
 </body>
 </html>
